# new-chunking-benchmarks

./: .env.example  .gitignore  Pipfile  README.md  pyproject.toml  results.md
assets/chroma/: results.json
assets/images/: method.drawio
cached_retrieval/0089088d2099a23891723c34d8e06b1e/: output.pkl
cached_retrieval/00977bf4cc0a189644eb47b44733f262/: metadata.json  output.pkl
cached_retrieval/00eaf06b2cf6402005196433229a3acf/: output.pkl
cached_retrieval/0110552c5de294c854c30bb95fc0b1c0/: output.pkl
cached_retrieval/012cc647347bb3491d528c0a6d725dcf/: output.pkl
cached_retrieval/022d4bfeccf0d136a0d324f93cd70030/: output.pkl
cached_retrieval/022de2f95709c5983515149ac3981449/: metadata.json  output.pkl
cached_retrieval/0273efef5f8dd439ed8866d07057ec8e/: metadata.json
cached_retrieval/029266a16ada561e27ed1e474f3ba183/: output.pkl
cached_retrieval/02af771b3f89cacb24c9b3b233164b37/: metadata.json
cached_retrieval/02e3709f565816a2e3d5c346d865b94e/: metadata.json
cached_retrieval/02effce75f0c9879689291786300df0c/: output.pkl
cached_retrieval/02f0e8452c6cf455826c6c97c7f0f71d/: output.pkl
cached_retrieval/0359c7891b0c581988e266e2aaadad34/: output.pkl
cached_retrieval/03f7a5de6d1af5aa6d839001f41131b7/: output.pkl
cached_retrieval/040b78235d79f96a7cfdf463678cd451/: metadata.json  output.pkl
cached_retrieval/041ca2158d1cf6a8186fbb342caf612f/: metadata.json
chunking_benchmark/: chroma_benchmark.py  chroma_dataset_stats.ipynb  gen_qa.py  get_chunks.py  get_chunks_extended.py  schema.py
docs/: 24-10-29.md
(+5712 files in other folders)
